--- a/fonts-bukkit/src/main/resources/plugin.yml
+++ b/fonts-bukkit/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ version: '${project.version}'
 main: com.pedestriamc.fonts.Fonts
 api-version: 1.16
 prefix: Fonts
-authors: [ wiicart ]
+author: wiicart
 description: Chat font customizer
 commands:
   font:
